fix: stabilize sentry healthcheck workflow runtime

--- a/.github/workflows/sentry-healthcheck.yml
+++ b/.github/workflows/sentry-healthcheck.yml
@@ -32,6 +32,9 @@ jobs:
       DEFAULT_BRANCH: ${{ github.event.repository.default_branch }}
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Validate required secrets
         run: |
           set -euo pipefail
@@ -93,7 +96,7 @@ jobs:
           main_sha=$(gh api "repos/${GITHUB_REPOSITORY}/commits/${branch}" --jq .sha)
           gh api "repos/${GITHUB_REPOSITORY}/commits/${main_sha}/check-runs" > /tmp/check-runs.json
 
-          result=$(python3 -c "import json; from pathlib import Path; payload=json.loads(Path('/tmp/check-runs.json').read_text(encoding='utf-8')); checks=payload.get('check_runs', []); matches=[((c.get('app') or {}).get('slug',''), (c.get('app') or {}).get('name',''), c.get('name','')) for c in checks if 'sentry' in (((c.get('app') or {}).get('slug','')).lower()) or 'sentry' in (((c.get('app') or {}).get('name','')).lower()) or 'sentry' in ((c.get('name') or '').lower())]; print('FOUND' if matches else 'NOT_FOUND'); [print(f'- app.slug={s}, app.name={n}, check={k}') for s,n,k in matches]")
+          result=$(python3 -c "import json; from pathlib import Path; payload=json.loads(Path('/tmp/check-runs.json').read_text(encoding='utf-8')); checks=payload.get('check_runs', []); matches=[((c.get('app') or {}).get('slug',''), (c.get('app') or {}).get('name',''), c.get('name','')) for c in checks if 'sentry' in (((c.get('app') or {}).get('slug','')).lower()) or 'sentry' in (((c.get('app') or {}).get('name','')).lower())]; print('FOUND' if matches else 'NOT_FOUND'); [print(f'- app.slug={s}, app.name={n}, check={k}') for s,n,k in matches]")
 
           echo "$result"
           if echo "$result" | head -n1 | grep -q "FOUND"; then
