fix: AI 요약 카드 5개 포스트 추가 및 Sentry deprecation 수정
- 2026-02-09~10 포스트 5개에 ai-summary-card 추가
- Sentry release action: version → release 파라미터 변경

--- a/.github/workflows/sentry-release.yml
+++ b/.github/workflows/sentry-release.yml
@@ -242,7 +242,7 @@ jobs:
           SENTRY_LOG_LEVEL: debug
         with:
           environment: production
-          version: ${{ github.sha }}
+          release: ${{ github.sha }}
           sourcemaps: false
           set_commits: auto
           ignore_missing: true
