fix: CSS 변수 불일치, 워크플로우, 설정 파일 종합 개선
- _certification.scss: 미정의 CSS 변수를 --color-* 접두사로 통일
- _layout.scss: --color-primary-dark → --color-primary-hover
- daily-news.yml: gemini-pro → gemini-2.0-flash, 미도달 조건 수정
- security-audit.yml: Ruby 3.2 → 3.3 (jekyll.yml과 일치)
- _config.yml: 중복 incremental, 미사용 sitemap 블록, theme:null 제거
- build.sh: 미사용 main.js 압축 블록 제거
- post.html: inline onerror 제거 (CSP 개선)
- NLB 가이드 영어 제목 3건 한국어 번역
- 미사용 파일 삭제: google-translate.html, prompt.txt

--- a/.github/workflows/daily-news.yml
+++ b/.github/workflows/daily-news.yml
@@ -84,7 +84,7 @@ jobs:
               sys.exit(1)
 
           genai.configure(api_key=api_key)
-          model = genai.GenerativeModel('gemini-pro')
+          model = genai.GenerativeModel('gemini-2.0-flash')
 
           # -p 플래그로 프롬프트 받기
           if len(sys.argv) > 2 and sys.argv[1] == "-p":
@@ -349,7 +349,7 @@ jobs:
 
   weekly-source-check:
     runs-on: ubuntu-latest
-    if: github.event_name == 'schedule' && github.event.schedule == '0 1 * * 1'
+    if: github.event_name == 'schedule' && github.event.schedule == '0 1 * * *'
     
     steps:
       - name: Checkout repository
