--- a/.github/workflows/monitoring.yml
+++ b/.github/workflows/monitoring.yml
@@ -46,7 +46,7 @@ jobs:
           which jq > /dev/null 2>&1 || (apt-get update && apt-get install -y jq)
 
       - name: Run Vercel monitoring
-        run: bash scripts/monitor_vercel_builds.sh --alert-only
+        run: bash scripts/monitor_vercel_builds.sh https://tech.2twodragon.com --alert-only
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
